--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,15 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+# The end results
+build
+
+# server created dirs
+uploads
+temp
+tree-files
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+bower_components
