--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "version": "0.0.1",
   "private": true,
-  "main": "server.js"
+  "main": "server.js",
 
   "repository": {
     "type": "git"
@@ -23,6 +23,7 @@
     "base64-stream": "0.1.2",
     "bcrypt": "*",
     "body-parser": "1.9.0",
+    "grunt-cli": "*",
     "express": "4.9.5",
     "jsonwebtoken": "*",
     "lodash": "2.4.1",
