--- a/package.json
+++ b/package.json
@@ -39,10 +39,8 @@
     "rimraf": "2.4.2",
     "easyimage": "2.0.3",
     "underscore.string": "2.3.3",
-    "winston": "0.8.0"
-  },
+    "winston": "0.8.0",
 
-  "devDependencies": {
     "grunt": "0.4.5",
     "grunt-cli": "*",
     "grunt-bower-install-simple": "1.0.3",
