--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.9.5",
     "jsonwebtoken": "*",
     "lodash": "2.4.1",
+    "lwip": "0.0.7",
     "mkdirp": "0.5.1",
     "moment": "2.8.4",
     "moment-timezone": "0.2.5",
@@ -39,8 +40,9 @@
     "rimraf": "2.4.2",
     "easyimage": "2.0.3",
     "underscore.string": "2.3.3",
-    "winston": "0.8.0",
-
+    "winston": "0.8.0"
+  },
+  "devDependencies": {
     "grunt": "0.4.5",
     "grunt-cli": "*",
     "grunt-bower-install-simple": "1.0.3",
